--- a/app/src/main/res/layout/schedules_list_item.xml
+++ b/app/src/main/res/layout/schedules_list_item.xml
@@ -1,71 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardSch"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <data>
+        <variable
+            name="schedule"
+            type="com.example.esportapps_uts.model.Schedule" />
+    </data>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/txtMonth"
-                android:layout_width="50dp"
-                android:layout_height="22dp"
-                android:gravity="center"
-                android:text="SEP"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtDate" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardSch"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/txtEvent"
-                android:layout_width="194dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Regional Qualifer Valorant"
-                app:layout_constraintStart_toEndOf="@+id/txtDate"
-                app:layout_constraintTop_toTopOf="parent" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/txtDate"
-                android:layout_width="49dp"
-                android:layout_height="23dp"
-                android:gravity="center"
-                android:text="05"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/txtMonth"
+                    android:layout_width="50dp"
+                    android:layout_height="22dp"
+                    android:gravity="center"
+                    android:text="SEP"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtDate" />
 
-            <TextView
-                android:id="@+id/txtTeam"
-                android:layout_width="127dp"
-                android:layout_height="45dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Valo - Team A"
-                app:layout_constraintStart_toEndOf="@+id/txtEvent"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/txtEvent"
+                    android:layout_width="194dp"
+                    android:layout_height="45dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Regional Qualifer Valorant"
+                    app:layout_constraintStart_toEndOf="@+id/txtDate"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/btnSchDetail"
-                android:layout_width="42dp"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:textSize="12sp"
-                app:icon="@drawable/baseline_navigate_next_24"
-                app:iconGravity="start"
-                app:layout_constraintStart_toEndOf="@+id/txtTeam"
-                app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/txtDate"
+                    android:layout_width="49dp"
+                    android:layout_height="23dp"
+                    android:gravity="center"
+                    android:text="05"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/txtTeam"
+                    android:layout_width="127dp"
+                    android:layout_height="45dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="Valo - Team A"
+                    app:layout_constraintStart_toEndOf="@+id/txtEvent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/btnSchDetail"
+                    android:layout_width="42dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:textSize="12sp"
+                    app:icon="@drawable/baseline_navigate_next_24"
+                    app:iconGravity="start"
+                    app:layout_constraintStart_toEndOf="@+id/txtTeam"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
