--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,6 +7,12 @@
         <variable
             name="user"
             type="com.example.esportapps_uts.model.User" />
+        <variable
+            name="signuplistener"
+            type="com.example.esportapps_uts.view.ButtonSignUpListener" />
+        <variable
+            name="loginlistener"
+            type="com.example.esportapps_uts.view.ButtonBackListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +27,7 @@
             android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="Password"
+            android:text="@={user.password}"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -47,6 +54,7 @@
             android:layout_marginTop="20dp"
             android:ems="10"
             android:hint="Username"
+            android:text="@={user.username}"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -60,6 +68,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="56dp"
             android:text="SignUp"
+            android:onClick="@{signuplistener::onButtonSignUp}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxIagree" />
 
@@ -70,6 +79,7 @@
             android:layout_marginTop="32dp"
             android:ems="10"
             android:hint="Nama Depan"
+            android:text="@={user.firstname}"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
@@ -79,6 +89,7 @@
         <EditText
             android:id="@+id/txtNamaBelakang"
             android:layout_width="300dp"
+            android:text="@={user.lastname}"
             android:layout_height="55dp"
             android:layout_marginTop="20dp"
             android:ems="10"
@@ -120,6 +131,7 @@
             android:layout_marginStart="56dp"
             android:layout_marginTop="16dp"
             android:text="Back"
+            android:onClick="@{loginlistener::onButtonBack}"
             android:textColorLink="#0F0E0E"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxIagree" />
