--- a/app/src/main/res/layout/fragment_achievements.xml
+++ b/app/src/main/res/layout/fragment_achievements.xml
@@ -5,8 +5,12 @@
 
     <data>
         <variable
-            name="gamr"
+            name="game"
             type="com.example.esportapps_uts.model.Game" />
+
+        <variable
+            name="achievement"
+            type="com.example.esportapps_uts.model.Achievement" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,6 +18,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".view.AchievementsFragment">
+
+        <!-- ProgressBar -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,13 +42,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <!-- Game Image -->
             <ImageView
                 android:id="@+id/imgGame"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
+                app:imageUrl="@{game.photoUrl}"
                 tools:src="@tools:sample/backgrounds/scenic" />
 
+            <!-- Spinner for Years -->
             <Spinner
                 android:id="@+id/spinYears"
                 android:layout_width="match_parent"
@@ -41,23 +59,25 @@
                 android:layout_marginTop="50dp"
                 android:spinnerMode="dropdown" />
 
+            <!-- Game Name -->
             <TextView
                 android:id="@+id/txtName"
-                android:layout_width="146dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="27dp"
-                android:layout_marginEnd="328dp"
-                android:text="Nama Game"
+                android:text="@{achievement.name}"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
+            <!-- Achievements -->
             <TextView
                 android:id="@+id/txtAchievement"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="220dp"
-                android:text="Juara turnamen antar kota" />
+                android:text="@{achievement.description}"
+                tools:text="Default Achievement Description" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
