--- a/app/src/main/res/layout/fragment_proposal_list.xml
+++ b/app/src/main/res/layout/fragment_proposal_list.xml
@@ -1,33 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/txtProposal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.ProposalListFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <data>
+        <!-- Data Binding Variables -->
+        <variable
+            name="progressBarListener"
+            type="com.example.esportapps_uts.view.ProgressBarListener" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        tools:context=".view.ProposalListFragment">
 
+        <!-- Title -->
         <TextView
-            android:id="@+id/textView8"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Proposal List" />
-
-        <Button
-            android:id="@+id/button2"
+            android:id="@+id/textTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            app:icon="@drawable/baseline_add_24" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:text="Proposal List"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black" />
 
+        <!-- RecyclerView for Proposal List -->
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewProposals"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_below="@id/textTitle"
+            android:layout_above="@id/fabAddProposal"
+            android:clipToPadding="false"
+            android:paddingHorizontal="16dp"
+            tools:listitem="@layout/proposal_list_item" />
 
-    </LinearLayout>
-</FrameLayout>
+        <!-- ProgressBar -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:onClick="@{(view) -> progressBarListener.onProgressBarClick(view, true, `Loading...`)}" />
+
+        <!-- FAB (Floating Action Button) -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddProposal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"
+            app:srcCompat="@drawable/baseline_add_24"
+            app:tint="@android:color/white"
+            app:backgroundTint="?attr/colorPrimary" />
+
+    </RelativeLayout>
+</layout>
