--- a/app/src/main/res/layout/fragment_team_detail.xml
+++ b/app/src/main/res/layout/fragment_team_detail.xml
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.TeamDetailFragment">
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
+        <!-- Image Placeholder -->
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -18,19 +18,21 @@
             android:scaleType="centerCrop"
             android:src="@drawable/ml" />
 
+        <!-- Team Group Name -->
         <TextView
-            android:id="@+id/txtTeamA"
+            android:id="@+id/txtTeamGroup"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="left"
-            android:gravity="center|left"
-            android:text="TEAM A"
+            android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:padding="8dp"
+            android:text="Team Group Name" />
 
+        <!-- RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </LinearLayout>
-</FrameLayout>
+</layout>
